--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -152,7 +152,7 @@
                 <div class="doc">
                   <div class="card">
                     <div class="card-header row m-0">
-                      <h5 class="font-weight-bold mt-2">Laura Thompson</h5>
+                      <h5 class="mb-0 pl-0 align-self-center">Laura Thompson</h5>
                       <div class="ml-auto">
                         <div class="btn btn-light" (click)="closeDoc()">
                           <i class="fa fa-times"></i>
@@ -526,7 +526,7 @@
                 <div class="doc">
                   <div class="card">
                     <div class="card-header row m-0">
-                      <h5 class="font-weight-bold mt-2">All Users</h5>
+                      <h5 class="mb-0 pl-0 align-self-center">All Users</h5>
                       <div class="ml-auto">
                         <div class="btn btn-light" (click)="closeDoc()">
                           <i class="fa fa-times"></i>
