--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -101,7 +101,7 @@
                 <div class="doc">
                   <div class="card">
                     <div class="card-header row m-0">
-                      <h5 class="font-weight-bold mt-2">Announcement details</h5>
+                      <h5 class="mb-0 pl-0 align-self-center">Announcement details</h5>
                       <div class="ml-auto">
                         <div class="btn btn-light" (click)="closeDoc()">
                           <i class="fa fa-times"></i>
