--- a/src/app/home-layout/header/header.component.html
+++ b/src/app/home-layout/header/header.component.html
@@ -1,10 +1,12 @@
 <header>
-  <nav class="navbar navbar-expand navbar-light bg-white">
-    <a class="navbar-brand ml-3 pr-5 border-right py-2" href="javascript:void(0)"><img src="assets/images/logo.png" alt="Hi Force"></a>
+  <nav class="navbar navbar-expand navbar-light bg-white pl-3">
+    <a class="navbar-brand pr-3 border-right py-2" href="javascript:void(0)"><img src="assets/images/logo.png"
+        alt="Hi Force"></a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0);" (click)="toggleSidebar()"><i class="fas fa-bars align-middle"></i></a>
+          <a class="nav-link" href="javascript:void(0);" (click)="toggleSidebar()"><i
+              class="fas fa-bars align-middle"></i></a>
         </li>
       </ul>
       <ul class="navbar-nav toggle-navbar">
@@ -16,7 +18,8 @@
             <i class="fas fa-bell align-bottom icon-size"></i>
           </a>
           <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="notificatioDD">
-            <h5 class="dropdown-item text-dark font-weight-bold no-bg-hover">Notifications<small class="badge badge-danger float-right">8</small></h5>
+            <h5 class="dropdown-item text-dark font-weight-bold no-bg-hover">Notifications<small
+                class="badge badge-danger float-right">8</small></h5>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item row m-0 mt-2" href="javascript:void(0)">
               <div class="col-3 align-self-center"><img src="assets/images/avatar.png" class="w-100"></div>
@@ -45,7 +48,8 @@
           </div>
         </li>
         <li class="nav-item align-self-center dropdown ml-4 user">
-          <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button"
+            data-toggle="dropdown" aria-expanded="false">
             <img src="assets/images/avatar.png"><span class="align-middle"> Art
               Template</span>
           </a>
