--- a/src/styles.scss
+++ b/src/styles.scss
@@ -279,7 +279,7 @@ header {
       color: white !important;
     }
 
-    >.nav-item:hover {
+    >.nav-item:hover:not(.active) {
       background-color: $hi-dark-grey;
       color: darken($color: $hi-dark, $amount: 15) !important;
     }
@@ -318,7 +318,7 @@ header {
       // }
     }
 
-    .dropright:hover {
+    .dropright:hover:not(.active) {
       background-color: $hi-dark-grey;
 
       .nav-item {
