tab to sidebar, cursor pointer

--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -25,12 +25,17 @@
                             <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
                               <thead>
                                 <tr>
-                                  <th scope="col">SUBJECT<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col">AUTHOR<i class="fas fa-sort-down ml-1 align-top"></i>
+                                  <th scope="col" class="cursor-pointer">SUBJECT<i
+                                      class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col" class="cursor-pointer">AUTHOR<i
+                                      class="fas fa-sort-down ml-1 align-top"></i>
                                   </th>
-                                  <th scope="col">RECIPIENTS<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col">DATE SENT<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col">READ<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col" class="cursor-pointer">RECIPIENTS<i
+                                      class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col" class="cursor-pointer">DATE SENT<i
+                                      class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col" class="cursor-pointer">READ<i
+                                      class="fas fa-sort-down ml-1 align-top"></i></th>
                                   <th></th>
                                 </tr>
                               </thead>
