--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -90,12 +90,17 @@
                             <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
                               <thead>
                                 <tr>
-                                  <th scope="col">NAME<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col">Latest Activity<i class="fas fa-sort-down ml-1 align-top"></i>
+                                  <th scope="col" class="cursor-pointer">NAME<i
+                                      class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col" class="cursor-pointer">Latest Activity<i
+                                      class="fas fa-sort-down ml-1 align-top"></i>
                                   </th>
-                                  <th scope="col">Content Updated<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col">Role<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col">Date Created<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col" class="cursor-pointer">Content Updated<i
+                                      class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col" class="cursor-pointer">Role<i
+                                      class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col" class="cursor-pointer">Date Created<i
+                                      class="fas fa-sort-down ml-1 align-top"></i></th>
                                 </tr>
                               </thead>
                               <tbody>
@@ -468,12 +473,17 @@
                       <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
                         <thead>
                           <tr>
-                            <th scope="col">NAME<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                            <th scope="col">Latest Activity<i class="fas fa-sort-down ml-1 align-top"></i>
+                            <th scope="col" class="cursor-pointer">NAME<i class="fas fa-sort-down ml-1 align-top"></i>
                             </th>
-                            <th scope="col">Content Updated<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                            <th scope="col">Role<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                            <th scope="col">Date Created<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                            <th scope="col" class="cursor-pointer">Latest Activity<i
+                                class="fas fa-sort-down ml-1 align-top"></i>
+                            </th>
+                            <th scope="col" class="cursor-pointer">Content Updated<i
+                                class="fas fa-sort-down ml-1 align-top"></i></th>
+                            <th scope="col" class="cursor-pointer">Role<i class="fas fa-sort-down ml-1 align-top"></i>
+                            </th>
+                            <th scope="col" class="cursor-pointer">Date Created<i
+                                class="fas fa-sort-down ml-1 align-top"></i></th>
                           </tr>
                         </thead>
                         <tbody>
