changed curs-ptr class in html

--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -25,17 +25,16 @@
                             <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
                               <thead>
                                 <tr>
-                                  <th scope="col" class="cursor-pointer">SUBJECT<i
+                                  <th scope="col" class="curs-ptr">SUBJECT<i
                                       class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col" class="cursor-pointer">AUTHOR<i
-                                      class="fas fa-sort-down ml-1 align-top"></i>
+                                  <th scope="col" class="curs-ptr">AUTHOR<i class="fas fa-sort-down ml-1 align-top"></i>
                                   </th>
-                                  <th scope="col" class="cursor-pointer">RECIPIENTS<i
+                                  <th scope="col" class="curs-ptr">RECIPIENTS<i
                                       class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col" class="cursor-pointer">DATE SENT<i
+                                  <th scope="col" class="curs-ptr">DATE SENT<i
                                       class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col" class="cursor-pointer">READ<i
-                                      class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col" class="curs-ptr">READ<i class="fas fa-sort-down ml-1 align-top"></i>
+                                  </th>
                                   <th></th>
                                 </tr>
                               </thead>
