--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -90,16 +90,16 @@
                             <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
                               <thead>
                                 <tr>
-                                  <th scope="col" class="cursor-pointer">NAME<i
+                                  <th scope="col" class="curs-ptr">NAME<i
                                       class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col" class="cursor-pointer">Latest Activity<i
+                                  <th scope="col" class="curs-ptr">Latest Activity<i
                                       class="fas fa-sort-down ml-1 align-top"></i>
                                   </th>
-                                  <th scope="col" class="cursor-pointer">Content Updated<i
+                                  <th scope="col" class="curs-ptr">Content Updated<i
                                       class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col" class="cursor-pointer">Role<i
+                                  <th scope="col" class="curs-ptr">Role<i
                                       class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col" class="cursor-pointer">Date Created<i
+                                  <th scope="col" class="curs-ptr">Date Created<i
                                       class="fas fa-sort-down ml-1 align-top"></i></th>
                                 </tr>
                               </thead>
@@ -473,16 +473,16 @@
                       <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
                         <thead>
                           <tr>
-                            <th scope="col" class="cursor-pointer">NAME<i class="fas fa-sort-down ml-1 align-top"></i>
+                            <th scope="col" class="curs-ptr">NAME<i class="fas fa-sort-down ml-1 align-top"></i>
                             </th>
-                            <th scope="col" class="cursor-pointer">Latest Activity<i
+                            <th scope="col" class="curs-ptr">Latest Activity<i
                                 class="fas fa-sort-down ml-1 align-top"></i>
                             </th>
-                            <th scope="col" class="cursor-pointer">Content Updated<i
+                            <th scope="col" class="curs-ptr">Content Updated<i
                                 class="fas fa-sort-down ml-1 align-top"></i></th>
-                            <th scope="col" class="cursor-pointer">Role<i class="fas fa-sort-down ml-1 align-top"></i>
+                            <th scope="col" class="curs-ptr">Role<i class="fas fa-sort-down ml-1 align-top"></i>
                             </th>
-                            <th scope="col" class="cursor-pointer">Date Created<i
+                            <th scope="col" class="curs-ptr">Date Created<i
                                 class="fas fa-sort-down ml-1 align-top"></i></th>
                           </tr>
                         </thead>
