--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -52,14 +52,13 @@
                             <table class="table table-hover text-dark w-100">
                               <thead>
                                 <tr>
-                                  <th scope="col" class="cursor-pointer">NAME<i
-                                      class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col" class="cursor-pointer">SIZE<i
-                                      class="fas fa-sort-down ml-1 align-top"></i>
+                                  <th scope="col" class="curs-ptr">NAME<i class="fas fa-sort-down ml-1 align-top"></i>
                                   </th>
-                                  <th scope="col" class="cursor-pointer">ADDED<i
-                                      class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col" class="cursor-pointer">AUTHORS<i
+                                  <th scope="col" class="curs-ptr">SIZE<i class="fas fa-sort-down ml-1 align-top"></i>
+                                  </th>
+                                  <th scope="col" class="curs-ptr">ADDED<i class="fas fa-sort-down ml-1 align-top"></i>
+                                  </th>
+                                  <th scope="col" class="curs-ptr">AUTHORS<i
                                       class="fas fa-sort-down ml-1 align-top"></i></th>
                                 </tr>
                               </thead>
@@ -672,11 +671,11 @@
                       <table class="table table-hover text-dark w-100">
                         <thead>
                           <tr>
-                            <th scope="col" class="cursor-pointer">NAME<i class="fas fa-sort-down ml-1 align-top"></i>
+                            <th scope="col" class="curs-ptr">NAME<i class="fas fa-sort-down ml-1 align-top"></i>
                             </th>
-                            <th scope="col" class="cursor-pointer">STATUS<i class="fas fa-sort-down ml-1 align-top"></i>
+                            <th scope="col" class="curs-ptr">STATUS<i class="fas fa-sort-down ml-1 align-top"></i>
                             </th>
-                            <th scope="col" class="cursor-pointer">DATE MODIFIED<i
+                            <th scope="col" class="curs-ptr">DATE MODIFIED<i
                                 class="fas fa-sort-down ml-1 align-top"></i></th>
                           </tr>
                         </thead>
